--- a/CoinGeckoCryptoTracker/package.json
+++ b/CoinGeckoCryptoTracker/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "html-react-parser": "^5.1.18",
     "react": "^18.3.1",
+    "react-content-loader": "^7.0.2",
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.28.0",
