--- a/CoinGeckoCryptoTracker/package.json
+++ b/CoinGeckoCryptoTracker/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-content-loader": "^7.0.2",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.1.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.28.0",
     "zustand": "^5.0.1"
